log
Fri Mar 27 05:44:24 PM UTC 2026: 
 tests:  0|6
total_score: 0/60
9312a44
Fri Mar 27 05:55:08 PM UTC 2026: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
Compilation failed
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:86:9: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   86 |     list->size++;
      |         ^~
278e22c
Fri Mar 27 05:55:48 PM UTC 2026: 
Compilation failed
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:86:9: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   86 |     list->size++;
      |         ^~
ce26fb9
Fri Mar 27 05:56:20 PM UTC 2026: 
Compilation failed
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:86:9: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   86 |     list->size++;
      |         ^~
d260ae7
Fri Mar 27 05:56:36 PM UTC 2026: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|6
total_score: 0/60
1dfe0b4
Fri Mar 27 06:04:35 PM UTC 2026: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
Compilation failed
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:87:5: error: expected ‘}’ before ‘else’
   87 |     else {
      |     ^~~~
list.c:88:15: error: ‘List’ {aka ‘struct List’} has no member named ‘trail’; did you mean ‘tail’?
   88 |         list->trail = newNode;
      |               ^~~~~
      |               tail
7379eeb
Fri Mar 27 06:04:56 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:87:5: error: expected ‘}’ before ‘else’
   87 |     else {
      |     ^~~~
60e6260
Fri Mar 27 06:06:05 PM UTC 2026: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:90:15: error: ‘List’ {aka ‘struct List’} has no member named ‘trail’; did you mean ‘tail’?
   90 |         list->trail = newNode;
      |               ^~~~~
      |               tail
c1c101d
Fri Mar 27 06:06:14 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/60
9a49072
Fri Mar 27 06:15:31 PM UTC 2026: 
 list.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/60
5147c4d
Fri Mar 27 06:29:01 PM UTC 2026: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/60
c1fc782
Fri Mar 27 06:31:56 PM UTC 2026: 
 tests:  1|5
total_score: 10/60
4239afa
Fri Mar 27 06:34:11 PM UTC 2026: 
 tests:  1|5
total_score: 10/60
59e115f
Sat Mar 28 11:27:36 PM UTC 2026: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 20/60
c9f17f4
